# projeto-streamlit-nv

./: cadastro.py  clientes.csv  pyproject.toml
pages/: consulta.py
